Run some cleanup